.k8s/sponsored-hub/hub.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: sponsored-hubs
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hub-<NAME>
  namespace: sponsored-hubs
spec:
  selector:
    matchLabels:
      app: message-hub-<NAME>
  template:
    metadata:
      labels:
        app: message-hub-<NAME>
    spec:
      terminationGracePeriodSeconds: 5
      containers:
      - name: message-hub
        image: k0t0/node:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 12002
---
apiVersion: v1
kind: Service
metadata:
  name: hub-service-<NAME>
  namespace: sponsored-hubs
spec:
  type: ClusterIP
  selector:
    app: message-hub-<NAME>
  ports:
  - name: http
    port: 12002

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: koto-<NAME>
  namespace: sponsored-hubs
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "do-issuer"
    # acme.cert-manager.io/http01-edit-in-place: "true"
    # cert-manager.io/issue-temporary-certificate: "true"
spec:
  tls:
  - hosts:
    - "*.koto.at"
    secretName: koto-tls-backend
  rules:
  - host: <NAME>.koto.at
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hub-service-<NAME>
            port:
              number: 12002
